# h3-engine

./: .gitignore  README.md  config.yaml  convert_h3_multi.py  pyproject.toml
converter/: __init__.py  converter.py  h3_engine.py  predicates.py
dashboard/: app.py  config.py  tile_server.py
dashboard/components/: __init__.py  maplibre.py  matrix.py
dashboard/pages/: __init__.py  association.py  sandbox.py  sentence_gen.py
docs/: duckdb.md
engine/: __init__.py  h3_engine.py  h3_engine_mvt_renderer.py
scripts/: convert_and_import.py  convert_h3_multi.py  duckdb_queries.py  import_to_duckdb.py  test_sentence_generator.py
sentence_generator/: __init__.py  association_loader.py  config.py  sentence_generator.py  templates.py
spatial_association_analysis/: compute_association.py
